Save some files

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,3 +1,15 @@
 .footer__copyright{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  margin: 0;
+}
 
+@media only screen and (max-width: 690px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+  }
 }
