--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,3 +1,12 @@
 .cover__overlay{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(42, 44, 47, 0.3);
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
