--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,3 +1,17 @@
 .footer__link{
+  margin:0;
+  text-decoration: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.12;
+  color: white;
+}
 
+@media only screen and (max-width: 690px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
 }
