--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,12 @@
 .footer__links{
+  display: flex;
+  list-style: none;
+  gap: 18px;
+}
 
+@media only screen and (max-width: 690px) {
+  .footer__links {
+    gap: 32px;
+    flex-direction: column;
+  }
 }
