--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,20 @@
 .footer{
+  display: flex;
+  justify-content: space-between;
+  margin: 92px 48px 0;
+  padding-bottom: 24px;
+}
 
+@media only screen and (max-width: 768px) {
+  .footer {
+    margin: 88px 24px 0;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  .footer {
+    margin: 64px 16px 0;
+    flex-direction: column;
+    gap: 48px;
+  }
 }
