--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.16;
   color: white;
   text-align: center;
 }
@@ -12,6 +12,6 @@
 @media only screen and (max-width: 320px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.11;
   }
 }
