--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,13 +3,12 @@
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.08;
   margin-bottom: 40px;
 }
 
 @media only screen and (max-width: 320px) {
   .intro__title {
     font-size: 32px;
-    line-height: 35px;
   }
 }
