--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,9 +3,21 @@
   font-style: normal;
   font-weight: 200;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 1.4;
   letter-spacing: 1.7px;
   text-transform: uppercase;
   margin: 0;
   margin-top: 8px;
+}
+
+@media only screen and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
