--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,20 @@
 .lead__image {
   display: block;
   width: 100%;
-  margin: 64px auto 0 auto;
+  margin: 64px auto 0;
   object-fit: contain;
 }
 
 @media only screen and (max-width: 1024px) {
   .lead__image {
     max-width: 928px;
-    margin: 56px auto 0px;
+    margin-top: 56px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .lead__image {
+    margin-top: 40px;
   }
 }
 
