--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,4 +1,9 @@
 .place__paragraphs{
   grid-area: paragraph;
-  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .place__paragraphs {
+    margin: 0 16px;
+  }
 }
