--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,14 @@
 .place__website{
+  grid-area: website;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-self: end;
+}
 
+@media only screen and (max-width: 600px) {
+  .place__website {
+    align-self: flex-start;
+    margin: 0 16px;
+  }
 }
