--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,6 @@
 .places{
   display: flex;
+  flex-direction: column;
   gap: 80px;
   max-width: min(1184px, calc(100% - 148px * 2));
   margin: 92px auto 0;
@@ -14,12 +15,14 @@
 @media only screen and (max-width: 768px) {
   .places {
     max-width:calc(100% - 24px * 2);
+    gap: 72px;
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 600px) {
   .places {
     max-width: 100%;
     margin-top: 64px;
+    gap: 50px;
   }
 }
