--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,9 @@
 /* Vendor */
 @import url("../vendor/normalize.css");
 
+/* Link */
+@import url("../blocks/link/link.css");
+
 /* Fonts */
 @import url("../fonts/Inter/inter.css");
 
@@ -44,4 +47,18 @@
 @import url("../blocks/place/__title/place__title.css");
 @import url("../blocks/place/__url-heading/place__url-heading.css");
 @import url("../blocks/place/__website/place__website.css");
-@import url("../blocks/place/");
+@import url("../blocks/place/__paragraphs/place__paragraphs.css");
+
+/* Cover */
+@import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__background/cover__background.css");
+@import url("../blocks/cover/__overlay/cover__overlay.css");
+@import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__subtitle/cover__subtitle.css");
+@import url("../blocks/cover/__info/cover__info.css");
+
+/* Footer */
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/footer/__links/footer__links.css");
+@import url("../blocks/footer/__link/footer__link.css");
