--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,4 @@
 .cover__title {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
@@ -13,6 +11,7 @@
 
 @media only screen and (max-width: 510px) {
   .cover__title {
+    max-width: 250px;
     font-size: 32px;
     line-height: 1.09;
   }
