--- a/blocks/header/__lang-options/header__lang-options.css
+++ b/blocks/header/__lang-options/header__lang-options.css
@@ -1,5 +1,7 @@
 .header__lang-options{
-  position: relative;
+  list-style: none;
+  padding: 0;
+  margin: 0;
   top: -5px;
   display: flex;
   justify-content: space-between;
