--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,9 @@
 /* Vendor */
 @import url("../vendor/normalize.css");
+@import url("../vendor/fonts/Inter/inter.css");
 
 /* Link */
 @import url("../blocks/link/link.css");
-
-/* Fonts */
-@import url("../fonts/Inter/inter.css");
 
 /* Page */
 @import url("../blocks/page/page.css");
@@ -23,6 +21,7 @@
 @import url("../blocks/lead/__image/lead__image.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__title/lead__title.css");
+@import url("../blocks/lead/__figure/lead__figure.css");
 
 /* Intro */
 
@@ -31,6 +30,8 @@
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__title/intro__title.css");
 @import url("../blocks/intro/__container/intro__container.css");
+@import url("../blocks/intro/__list-item-title/intro__list-item-title.css");
+@import url("../blocks/intro/__list-item-value/intro__list-item-value.css");
 
 /* Photo Grid */
 @import url("../blocks/photo-grid/photo-grid.css");
