--- a/blocks/cover/__info/cover__info.css
+++ b/blocks/cover/__info/cover__info.css
@@ -1,4 +1,7 @@
-.cover__info{
+.cover__info {
+  grid-column: 1;
+  grid-row: 1;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   gap: 32px;
