--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,12 +1,19 @@
 .cover__overlay{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(42, 44, 47, 0.3);
-
   display: flex;
   align-items: center;
   justify-content: center;
+
+  grid-column: 1;
+  grid-row: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  transition: opacity 0.4s;
+}
+
+.cover__link:hover .cover__overlay{
+  opacity: 0.4;
 }
