--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,21 @@
 .footer{
   display: flex;
   justify-content: space-between;
-  margin: 92px 48px 0;
+  margin: 90px auto 0;
   padding-bottom: 24px;
+  max-width: min(1184px, calc(100% - 48px * 2));
 }
 
 @media only screen and (max-width: 768px) {
   .footer {
-    margin: 88px 24px 0;
+    max-width: calc(100% - 24px * 2);
   }
 }
 
 @media only screen and (max-width: 690px) {
   .footer {
-    margin: 64px 16px 0;
+    margin-top: 64px;
+    max-width: calc(100% - 16px * 2);
     flex-direction: column;
     gap: 48px;
   }
