--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,22 +1,21 @@
 .header{
   position: relative;
   display: flex;
-  margin: 0px 48px;
+  margin: 0 auto;
   padding-top: 28px;
-  height: 52px;
+  max-width: min(1184px, calc(100% - 48px * 2));
   justify-content: space-between;
 }
 
 @media only screen and (max-width: 768px) {
   .header {
-    margin: 0px 24px;
+    max-width: calc(100% - 24px * 2);
   }
 }
 
 @media only screen and (max-width: 320px) {
   .header {
-    height: 42px;
-    margin: 0px 16px;
+    max-width: calc(100% - 16px * 2);
     padding-top: 16px;
   }
 }
