--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,11 +1,11 @@
 .lead{
   max-width: 984px;
-  margin: 56px auto 0px;
+  margin: 56px auto 0;
 }
 
 @media only screen and (max-width: 1024px) {
   .lead {
     max-width: 928px;
-    margin: 48px auto 0px;
+    margin-top: 48px;
   }
 }
