--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,8 @@
 .page {
   font-family: 'Inter', Arial, sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
