--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,3 +2,9 @@
   max-width: 1184px;
   margin: 92px auto 0;
 }
+
+@media only screen and (max-width: 320px) {
+  .cover {
+    margin-top: 66px;
+  }
+}
