--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,10 +1,31 @@
 .cover__link{
+  position: relative;
   text-decoration: none;
   color: white;
-
   width: 100%;
-
   display: grid;
   grid-template-columns: 100%;
   align-items: center;
+  justify-items: center;
+  gap: 32px;
+  background-image: url("../../../images/cover-trains.jpg");
+  background-size: cover;
+  padding: calc((245 / 1184) * 100%) 0;
+}
+
+.cover__link::before {
+  display: block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  transition: opacity 0.4s;
+}
+
+.cover__link:hover::before{
+  opacity: 0.8;
 }
