--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,34 +1,35 @@
-.place{
+.place {
   max-width: 984px;
 
   display: grid;
   row-gap: 48px;
   column-gap: 40px;
-  grid-template-columns: repeat(2, minmax(min-content, 1fr));
+  grid-template-columns: calc((460 / 984) * 100%) 1fr;
   align-items: stretch;
   grid-template-areas:
-  "title website"
-  "image paragraph";
+    "title website"
+    "image paragraph";
 }
-
 
 @media only screen and (max-width: 1024px) {
   .place {
     row-gap: 48px;
     column-gap: 32px;
+    grid-template-columns: calc((440 / 928) * 100%) 1fr;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .place {
     column-gap: 28px;
+    grid-template-columns: calc((340 / 720) * 100%) 1fr;
   }
 }
 
 @media only screen and (max-width: 600px) {
   .place {
-   display: flex;
-   flex-direction: column;
-   gap: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
   }
 }
